--- a/style.css
+++ b/style.css
@@ -93,6 +93,9 @@ input {
 	margin: 8px 0;
 	width: 100%;
 }
+input:active{
+	border-color:rgba(209,111,204,0.3);
+}
 
 .container {
 	background-color: rgba(209,111,204,0.3);
